# wtools

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
include/wtools/: wcore.h  wmouse.h  wmsgbox.h  wnotifications.h  wsystem.h  wterminal.h  wtools.h
java/: CMakeLists.txt
java/me/adasdead/WTools/: wColors.java  wCore.java  wMessageBox.java  wMouse.java  wNotifications.java  wSystem.java  wTerminal.java
src/: CMakeLists.txt
src/jni/: me_adasdead_WTools_wMessageBox.c  me_adasdead_WTools_wMessageBox.h  me_adasdead_WTools_wMouse.c  me_adasdead_WTools_wMouse.h  me_adasdead_WTools_wNotifications.c  me_adasdead_WTools_wNotifications.h  me_adasdead_WTools_wSystem.c  me_adasdead_WTools_wSystem.h  me_adasdead_WTools_wTerminal.c  me_adasdead_WTools_wTerminal.h
src/linux/: wmouse.c  wmsgbox.c  wnotifications.c  wsystem.c  wterminal.c
src/windows/: wmouse.c  wmsgbox.c  wnotifications.c  wsystem.c  wterminal.c
